--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ body {
     font-family: 'FuturaPT', sans-serif;
     color: var(--text-body);
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 h1, h2 {
