--- a/css/main.css
+++ b/css/main.css
@@ -31,12 +31,17 @@
     font-style: normal;
 }
 
+html, body {
+    overflow-x: hidden
+}
+
 body {
     font-family: 'FuturaPT', sans-serif;
     color: var(--text-body);
     margin: 0;
     width: 100%;
     height: 100%;
+    /*overflow: hidden !important;*/
 }
 
 h1, h2 {
