--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
 }
 
 html, body {
-    overflow-x: hidden
+    overflow-x: hidden !important;
 }
 
 body {
@@ -42,6 +42,7 @@ body {
     width: 100%;
     height: 100%;
     /*overflow: hidden !important;*/
+    overflow-x: hidden !important;
 }
 
 h1, h2 {
