--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,14 @@ td {
     text-align: center;
 }
 
+#presents {
+    margin-bottom: 0;
+}
+
+#title {
+    margin-top: 0;
+}
+
 @media (max-width: 800px) {
     .grid.header {
         font-size: 1.25em;
